# gomoku

./: CMakeLists.txt  README.md  res.qrc
doc/: art-assets.md  module_interfaces.md  okr.md  online_avatar_animation_solution.md  plan.md  simple_online_avatar_intro_animation.md
src/ai/: ai_engine.cpp  ai_engine.h  ai_turn_actor.cpp  ai_turn_actor.h  board_evaluator.cpp  board_evaluator.h
src/app/: main.cpp
src/common/: config.h  gomoku_types.h
src/core/: game_controller.cpp  game_controller.h  game_rule.cpp  game_rule.h  game_state.h  human_turn_actor.h  turn_actor.h
src/core/actor/: human_turn_actor.h  turn_actor.h
src/core/controller/: game_controller.cpp  game_controller.h
src/core/rule/: game_rule.cpp
src/core/runtime/: turn_context.h
src/data/: database_manager.cpp  database_manager.h  models.h
src/network/: game_room.cpp  game_room.h  game_server.cpp  game_server.h  network_manager.cpp  network_manager.h  protocol.cpp  protocol.h
src/profile/: user_profile.cpp  user_profile.h
src/record/: record_manager.cpp  record_manager.h
src/ui/: chessboard_widget.cpp  chessboard_widget.h  history_dialog.cpp  history_dialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_online_debug.cpp  match_intro_overlay.cpp  match_intro_overlay.h  replay_dialog.cpp  replay_dialog.h
tools/: generate_code_guide.py
